# tyuiu-profile

./: .env  pyproject.toml
src/: config.py
src/database/: options.py
src/database/models/: abstract.py  base.py  user.py
src/database/services/: crud.py  db.py
src/http/: client.py  request.py
